tarjeta pokemon inicial terminada, falta modalidad de rivalidad y boton

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
 <body>
     <h1 class="titulo">Pokemon Battle</h1>
     <div class="intro">
-        <p class="instrucciones">En esta aplicacion, jugaras con la suerte y conoceras un poco mas acerca de este mundo Pokemon. Undi click en el boton y el destino te asignara tu companero para esta aventura! Juntos se afrontaran a 3 rivales de gimnasio y el resultado de estas batallas determinara si eres un verdadero maestro pokemon... Estas listo?</p>
+        <p class="instrucciones">En esta aplicacion, jugaras con la suerte y conoceras un poco mas acerca de este mundo Pokemon. Undi click en el boton y el destino te asignara tu companero para esta aventura! Juntos se afrontaran a un rival de gimnasio y el resultado de esta batalla determinara si eres un verdadero maestro pokemon... Estas listo?</p>
         <button id="comenzar">Empecemos!</button>
     </div>
     <div class="batalla">
         <div class="cartaPokemon">
             <div id="pokemon"></div>
-        </div>
-        <div class="cartaPokemonRival">
-            <div id="pokemonRivalUno"></div>
         </div>
     </div>
     <script src="main.js"></script>
