avanzando modalidad batalla del proyecto

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <h1 class="titulo">Pokemon Battle</h1>
     <div class="intro">
-        <p class="instrucciones">En esta aplicacion, jugaras con la suerte y conoceras un poco mas acerca de este mundo Pokemon. Undi click en el boton y el destino te asignara tu companero para esta aventura! Juntos se afrontaran a un rival de gimnasio y el resultado de esta batalla determinara si eres un verdadero maestro pokemon... Estas listo?</p>
+        <p class="instrucciones" id="instru">En esta aplicacion, jugaras con la suerte y conoceras un poco mas acerca de este mundo Pokemon. Undi click en el boton y el destino te asignara tu companero para esta aventura! Juntos se afrontaran a un rival de gimnasio y el resultado de esta batalla determinara si eres un verdadero maestro pokemon... Estas listo?</p>
         <button id="comenzar">Empecemos!</button>
     </div>
-    <div class="batalla">
+    <div id="arena" class="batalla">
         <div class="cartaPokemon">
-            <div id="pokemon"></div>
+            <div class="pokeInicial" id="pokemon"></div>
         </div>
     </div>
     <script src="main.js"></script>
